--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="margin: 0; background-color: black">
+  <body style="margin: 0; background-color: black; color: white">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
